--- a/slim/templates/index.phtml
+++ b/slim/templates/index.phtml
@@ -6,33 +6,90 @@
         <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
         <style>
             body {
-                margin: 50px 0 0 0;
+                margin: 0 0 0 0;
                 padding: 0;
                 width: 100%;
                 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-                text-align: center;
+                /* text-align: center; */
                 color: #aaa;
-                font-size: 18px;
+                font-size: 16px;
+                line-height: 1.5em;
             }
 
             h1 {
-                color: #719e40;
+                color: #aaa;
                 letter-spacing: -3px;
                 font-family: 'Lato', sans-serif;
-                font-size: 100px;
+                font-size: 3em;
                 font-weight: 200;
-                margin-bottom: 0;
+                margin: 0;
+                padding: 0 0 16px 0;
+                line-height: 1em;
+            }
+            h2 {
+                color: #aaa;
+                letter-spacing: 0;
+                font-family: 'Lato', sans-serif;
+                font-size: 1.75em;
+                font-weight: 200;
+                margin: 0;
+                padding: 0 0 16px 0;
+                line-height: 1em;
+            }
+            p {
+                margin: 0;
+                padding: 0 0 1em 0;
+            }
+            hr {
+                margin: 0;
+                padding: 0;
+                height: 1em;
+                border: 0px;
+                border-top: 2px solid #ddd;
+            }
+            ul {
+                margin: 0;
+                padding: 0 0 1em 1.5em;
+            }
+
+            div {
+                display: block;
+                padding: 50px;
             }
         </style>
     </head>
     <body>
-        <h1>Slim</h1>
-        <div>a microframework for PHP</div>
+        <div>
 
-        <?php if (isset($name)) : ?>
-            <h2>Hello <?= htmlspecialchars($name); ?>!</h2>
-        <?php else: ?>
-            <p>Try <a href="http://www.slimframework.com">SlimFramework</a></p>
-        <?php endif; ?>
+            <h1>User REST API</h1>
+            <p>a microframework for PHP</p>
+            <ul>
+                <li>point 1</li>
+                <li>point 2</li>
+                <li>point 3</li>
+            </ul>
+
+            <hr/>
+
+            <h2>Tools</h2>
+            <ul>
+                <li><a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code</a> for the IDE</li>
+                <li><a href="https://www.docker.com/" target="_blank">Docker for the localhost environment</li>
+                <li><a href="https://getcomposer.org/" target="_blank">Composer</a> for package management</li>
+                <li><a href="https://www.slimframework.com/" target="_blank">Slim</a> for the PHP framework</li>
+                <li><a href="https://redbeanphp.com/" target="_blank">RedBeanPHP</a> for the ORM</li>
+            </ul>
+
+
+            <!--
+            <?php if (isset($name)) : ?>
+                <h2>Hello <?= htmlspecialchars($name); ?>!</h2>
+            <?php else: ?>
+                <p>Try <a href="http://www.slimframework.com">SlimFramework</a></p>
+            <?php endif; ?> 
+            -->
+
+        </div>
+
     </body>
 </html>
